# weval

./: Cargo.toml  Makefile.toml  README.md  expression-generator.ipynb  index.html
benches/: benchmark.rs
src/: lib.rs  tests.rs
